# auto_write_txt_to_docs

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  added_lines_cache.json  added_lines_cache.json.example  backend_processor.py  config.json  config.json.example  main_gui.py  pyproject.toml  requirements.txt  task나누기.md
.github/workflows/: internal-bundled-release.yml  release-windows.yml
anal/: backend_processor.py
backup/: google_auth.py  main_gui.py
docs/: release-notes-v1.0.0.md  release-notes-v1.0.1.md  release-notes-v1.0.2.md  release-notes-v1.0.3.md  release-policy.md
scripts/: build_release.ps1
src/: __init__.py  backend_processor.py  main_gui.py
src/auto_write_txt_to_docs/: app_dialogs.py  autostart_utils.py  backend_processor.py  config_manager.py  google_auth.py  main_window_ui.py  path_utils.py  result_popup.py  ui_helpers.py  update_checker.py
src/auto_write_txt_to_docs/assets/: developer_credentials.json.example
tests/: test_app_dialogs.py  test_autostart_utils.py  test_backend_processor.py  test_config_manager.py  test_google_auth.py  test_main_gui_docs_actions.py  test_main_gui_notifications.py  test_main_gui_settings_lock.py  test_main_window_ui.py  test_packaging_config.py  test_path_unification.py  test_release_build_script.py  test_release_version_metadata.py  test_result_popup.py  test_ui_helpers.py  test_update_checker.py
