[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_write_txt_to_docs"
version = "1.0.0"
authors = [
  { name="122yjs" },
]
description = "텍스트 파일 변경 내용을 Google Docs에 자동으로 기록하는 데스크톱 앱"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "watchdog>=3.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.1.0",
    "psutil>=5.9.5",
    "pystray>=0.19.0",
    "tkinterdnd2>=0.4.2",
]

[project.urls]
"Homepage" = "https://github.com/122yjs/auto_write_txt_to_docs"
"Bug Tracker" = "https://github.com/122yjs/auto_write_txt_to_docs/issues"

[project.scripts]
auto_write_gui = "main_gui:main"

[tool.setuptools]
py-modules = ["main_gui"]

[tool.setuptools.package-data]
"src.auto_write_txt_to_docs" = ["assets/*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
